# cuVAE

./: .gitignore  CMakeLists.txt  compileVAE.sh  runTrainingScript.sh  train_vae.py
VAE/: vae.cu  vae.py  vae_pybind.cpp
